--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -38,6 +38,9 @@ header .logo img {
 header nav {
     display: flex;
     gap: 40px;
+    .header-socials {
+        display: none;
+    }
 }
 
 header nav a {
@@ -63,7 +66,7 @@ header .cta-button a button:hover {
     background-color: #353535; /* Зміна фону при наведенні */
 }
 
-header .burger {
+.burger {
     display: none;
 }
 
@@ -81,6 +84,7 @@ section {
 
 /* Загальні стилі для футера */
 footer {
+    
     padding: 40px;
     margin-bottom: 40px;
     height: 250px;
@@ -160,7 +164,7 @@ footer {
 
     .footer-logo {
         float: right;
-        padding-left: 300px;
+        padding-left: 35%;
 
         img {
             width: 160px;
