--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,21 +1,19 @@
 * {
-    color: #FCFCFC;
+    color: #fcfcfc;
     font-size: 28px;
     box-sizing: border-box;
-    font-family: 'Fira Sans', serif;
+    font-family: "Fira Sans", serif;
 }
 
-body {  
+body {
     background-color: #353535;
     margin: 0;
 }
 
-/* Загальні стилі для хедера */
 header {
-    
-    background-color: #0E272F;
+    background-color: #0e272f;
     position: sticky;
-    
+
     left: 0;
     top: 0;
     z-index: 1;
@@ -26,15 +24,13 @@ header {
     justify-content: space-between;
     padding: 5 40px;
     margin-top: 0;
-    color: #fcfcfc; /* Білий текст */
+    color: #fcfcfc;
 }
 
-/* Стилі для логотипу */
 header .logo img {
-    height: 100px; /* Розмір логотипу */
+    height: 100px;
 }
 
-/* Стилі для навігаційних посилань */
 header nav {
     display: flex;
     gap: 40px;
@@ -50,12 +46,11 @@ header nav a {
     font-size: 32px;
 }
 
-/* Стилі для кнопки */
 header .cta-button a button {
-    background-color: #353535; /* Колір фону кнопки */
+    background-color: #353535;
     color: #fcfcfc;
     padding: 15px 30px;
-    border: 1px solid #fcfcfc; /* Біла рамка */
+    border: 1px solid #fcfcfc;
     border-radius: 5px;
     cursor: pointer;
     transition: background-color 0.3s;
@@ -63,7 +58,7 @@ header .cta-button a button {
 }
 
 header .cta-button a button:hover {
-    background-color: #353535; /* Зміна фону при наведенні */
+    background-color: #353535;
 }
 
 .burger {
@@ -81,10 +76,7 @@ section {
     margin-left: 80px;
 }
 
-
-/* Загальні стилі для футера */
 footer {
-    
     padding: 40px;
     margin-bottom: 40px;
     height: 250px;
@@ -96,7 +88,6 @@ footer {
         flex: 1;
         max-width: 400px;
         float: left;
-        
 
         h3 {
             font-size: 24px;
@@ -108,9 +99,8 @@ footer {
             margin: 5px 0;
             font-size: 22px;
         }
-        
-        .social-icons {
 
+        .social-icons {
             a {
                 margin-right: 15px;
             }
@@ -120,20 +110,19 @@ footer {
                 height: 20px;
                 transition: transform 0.3s ease;
             }
-            
+
             a:hover img {
                 transform: scale(1.1);
             }
         }
     }
 
-
     .footer-services {
         flex: 1;
         max-width: 300px;
         float: left;
         margin-left: 60px;
-        
+
         h3 {
             font-size: 24px;
             margin-bottom: 15px;
@@ -148,19 +137,16 @@ footer {
         li {
             margin: 10px 0;
         }
-        
+
         a {
-            color: #FCFCFC;
+            color: #fcfcfc;
             font-size: 22px;
         }
-        
+
         a:hover {
             text-decoration: underline;
         }
-
     }
-
-
 
     .footer-logo {
         float: right;
@@ -170,16 +156,15 @@ footer {
             width: 160px;
             height: auto;
         }
-    } 
+    }
 }
 
 @media (max-width: 990px) {
-
     header nav {
-        gap: 20px;
+        gap: 15px;
     }
     header .cta-button a button {
-        margin: 16px;
+        margin: 14px;
     }
 
     footer {
@@ -206,7 +191,6 @@ footer {
             }
         }
 
-
         .footer-logo {
             padding-left: 10%;
             img {
@@ -216,22 +200,20 @@ footer {
     }
 }
 
-
-@media (max-width: 768px) {
-
+@media (max-width: 850px) {
     header nav {
-        display:none;
+        display: none;
     }
-    
+
     header .burger {
         display: flex;
     }
 
     header .logo img {
-        height: 60px; /* Розмір логотипу */
+        height: 60px;
     }
 
-    header .burger img{
+    header .burger img {
         height: 60px;
     }
 
@@ -240,7 +222,7 @@ footer {
         font-weight: 500;
     }
 
-    header .cta-button  {
+    header .cta-button {
         margin-left: 15%;
         padding: 10px 20px;
         button {
@@ -280,11 +262,8 @@ footer {
     }
 }
 
-
-
 @media (max-width: 425px) {
-
-    *{
+    * {
         font-size: 16px;
     }
 
@@ -297,28 +276,27 @@ footer {
     }
 
     header button {
-        font-size: 16px;
-        font-weight: 400;
+        font-size: 18px;
+        font-weight: 500;
     }
 
     header .logo img {
-        height: 40px; /* Розмір логотипу */
-    }
-
-    header .burger img{
         height: 40px;
     }
 
-    header .cta-button  {
+    header .burger img {
+        height: 40px;
+    }
+
+    header .cta-button {
         padding: 0;
 
         a button {
-            padding: 0;
+            padding: 4;
             font-size: 16px;
-            font-weight: 300;
         }
     }
-    *{
+    * {
         font-size: 16px;
     }
 
@@ -352,19 +330,18 @@ footer {
             }
         }
 
-        .footer-logo {  
+        .footer-logo {
             padding-left: 6%;
             img {
                 width: 60px;
                 height: auto;
             }
-        } 
+        }
     }
 }
 
-
 @media (max-width: 370px) {
-    header {    
+    header {
         padding: 5 20px;
     }
     header button {
@@ -373,23 +350,22 @@ footer {
     }
 
     header .logo img {
-        height: 40px; /* Розмір логотипу */
-    }
-
-    header .burger img{
         height: 40px;
     }
 
-    header .cta-button  {
+    header .burger img {
+        height: 40px;
+    }
+
+    header .cta-button {
         padding: 0;
 
         a button {
-            padding: 0;
+            padding: 4;
             font-size: 16px;
-            font-weight: 300;
         }
     }
-    *{
+    * {
         font-size: 16px;
     }
 
@@ -423,12 +399,12 @@ footer {
             }
         }
 
-        .footer-logo {  
+        .footer-logo {
             padding-left: 6%;
             img {
                 width: 50px;
                 height: auto;
             }
-        } 
+        }
     }
 }
