--- a/src/css/vacantions.css
+++ b/src/css/vacantions.css
@@ -1,8 +1,7 @@
-/* Секція вакансій */
 .content {
     max-width: 1200px;
     padding: 32px;
-    background-color: #D9D9D9;
+    background-color: #d9d9d9;
     border-radius: 10px;
     display: flex;
     gap: 20px;
@@ -14,17 +13,16 @@
     margin-bottom: 20px;
 }
 
-/* Ліва колонка: Список вакансій */
 .job-list-container {
     flex: 2;
     overflow-y: auto;
     max-height: 600px;
     padding-right: 10px;
     &::-webkit-scrollbar {
-        width: 4px; 
-      }
-    &::-webkit-scrollbar-thumb{
-        background-color:#353535;
+        width: 4px;
+    }
+    &::-webkit-scrollbar-thumb {
+        background-color: #353535;
     }
 }
 
@@ -34,9 +32,8 @@
     margin: 0;
 }
 
-/* Карточка вакансії */
 .job-card {
-    background-color: #BAB1B1;
+    background-color: #bab1b1;
     border-radius: 10px;
     margin-bottom: 20px;
     padding: 20px;
@@ -67,7 +64,6 @@
         color: #353535;
         margin: 0;
         line-height: 1.5;
-        
     }
 
     p.date {
@@ -77,17 +73,15 @@
     .card-bottom {
         display: flex;
         justify-content: space-between;
-        align-items: center; 
+        align-items: center;
         padding: 10 0px;
         margin: 5 0px;
-    
-    
-    
+
         button {
             border: 2px solid #353535;
             color: #353535;
             padding: 10px;
-            
+
             border-radius: 5px;
             cursor: pointer;
             align-self: flex-end;
@@ -95,16 +89,13 @@
     }
 }
 
-
-
 .job-card button:hover {
     background-color: #4d5ed0;
 }
 
-/* Права колонка: Фільтри */
 .filters {
     flex: 1;
-    background-color: #BAB1B1;
+    background-color: #bab1b1;
     color: #000;
     border-radius: 10px;
     padding: 20px;
@@ -114,10 +105,10 @@
     margin-right: 10px;
 
     &::-webkit-scrollbar {
-        width: 4px; 
-      }
-    &::-webkit-scrollbar-thumb{
-        background-color:#353535;
+        width: 4px;
+    }
+    &::-webkit-scrollbar-thumb {
+        background-color: #353535;
     }
 
     li {
@@ -156,12 +147,11 @@
     }
     .content {
         flex-direction: column;
-        background-color:#353535;
+        background-color: #353535;
         padding: 0;
-        
 
         .filters {
-            background-color:#D9D9D9;
+            background-color: #d9d9d9;
             order: 1;
             margin: 0;
             overflow-y: hidden;
@@ -174,7 +164,7 @@
                 gap: 10px;
                 height: calc(2 * 50px + 10px);
                 overflow-x: scroll;
-                border: 1px solid #BAB1B1; /* Біла рамка */
+                border: 1px solid #bab1b1;
                 border-radius: 5px;
             }
 
@@ -193,13 +183,11 @@
                         margin: 8px;
                     }
                 }
-
             }
-
         }
 
         .job-list-container {
-            background-color:#D9D9D9;
+            background-color: #d9d9d9;
             order: 2;
             padding: 0px;
         }
@@ -210,14 +198,11 @@
                 margin: 0px;
             }
         }
-
-        
     }
 }
 
-
 @media (max-width: 500px) {
-    .content {       
+    .content {
         .filters {
             margin-bottom: 20px;
 
@@ -231,19 +216,14 @@
             }
 
             .filter-lane {
-                
                 height: 50px;
                 li {
-                   
                     gap: 4 8px;
                     label {
-                        
                         margin: 8px;
                     }
                 }
-
             }
-
         }
 
         .job-list {
@@ -259,7 +239,7 @@
             p {
                 font-size: 16px;
             }
-            
+
             img {
                 max-width: 100px;
                 max-height: 100px;
